# umamoe-backend

./: .env.example  .gitignore  Cargo.toml  README.md  affinity.py  affinity_test.py  apply_affinity_migration.py  explain.sql  filter.py  postgres.conf
migrations/: 20251117000000_optimize_stats.sql  20251117000001_support_card_range_index.sql  20251117000002_support_card_experience_index.sql  20251117000003_cleanup_support_card_indexes.sql  20251201000000_inheritance_affinity_optimization.sql  20251208000000_add_search_indexes.sql  20251209000000_add_circle_indexes.sql  20251210000000_optimize_slow_queries.sql  20251211000000_optimize_circle_joins.sql  20251212000000_optimize_spark_scoring.sql  20251213000000_add_star_sum_columns.sql  20260104000000_optimize_query_performance.sql  20260104000001_remove_star_sums_trigger.sql  init.sql
src/: cache.rs  database.rs  errors.rs  main.rs
src/handlers/: circles.rs  mod.rs  search.rs  sharing.rs  stats.rs  tasks.rs
src/middleware/: mod.rs  turnstile.rs
src/models/: circles.rs  common.rs  inheritance.rs  mod.rs  search.rs  sharing.rs  stats.rs  support_cards.rs  tasks.rs
